[gd_scene load_steps=2 format=3 uid="uid://cg7hfmg0b6g8a"]

[ext_resource type="Script" path="res://Debug/debug.gd" id="1_027a3"]

[node name="debug" type="Label"]
offset_left = 32.0
offset_top = 32.0
offset_right = 366.0
offset_bottom = 462.0
text = "FPS: 0
Draw Calls:0
Frame Time:0
Objects:0"
script = ExtResource("1_027a3")

[node name="Panel" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
layout_mode = 0
offset_left = -32.0
offset_top = -32.0
offset_right = 391.0
offset_bottom = 367.0
color = Color(0, 0, 0, 0.905882)

[node name="view_debug" type="CheckBox" parent="."]
layout_mode = 0
offset_left = -6.0
offset_top = -33.0
offset_right = 106.0
offset_bottom = -2.0
button_pressed = true
text = "Show/Hide Debug"

[node name="show_wireframe" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 172.0
offset_top = -32.0
offset_right = 371.0
offset_bottom = -1.0
button_pressed = true
text = "Show/Hide Wireframe"

[node name="Player_speed" type="HSlider" parent="."]
layout_mode = 0
offset_left = -10.0
offset_top = 333.0
offset_right = 366.0
offset_bottom = 349.0
min_value = 5.0
max_value = 1000.0
value = 5.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -15.0
offset_top = 302.0
offset_right = 79.0
offset_bottom = 328.0
text = "Move Speed
"

[connection signal="toggled" from="view_debug" to="." method="_on_check_box_toggled"]
[connection signal="toggled" from="show_wireframe" to="." method="_on_show_wireframe_toggled"]
[connection signal="value_changed" from="Player_speed" to="." method="_on_player_speed_value_changed"]
